--- a/index.html
+++ b/index.html
@@ -19,7 +19,16 @@
     <div class="container" id="c1">
         <div class="row">
             <div class="col-sm-12">
-                <h1>Hello</h1>
+                <div class="card" style="width: 24rem;">
+                    <div class="card-body">
+                        <h1 class="card-title">The Psychic Game</h1>
+                        <p id="guess">Guess what letter I'm thinking of</p>
+                        <p id="win">Wins: </p>
+                        <p id="loss">Losses: </p>
+                        <p id="left">Guesses left: </p>
+                        <p id="far">Your Guesses so far: </p>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
