Final version of working program

--- a/index.html
+++ b/index.html
@@ -9,11 +9,13 @@
 <!-- The head links to bootstrap css sheet.-->
 
 <head>
-    <title>About me webpage.</title>
+    <title>Psychic Game</title>
     <link rel="stylesheet" href="assets/css/reset.css">
     <link rel="stylesheet" href="assets/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
+
+<!--    Contains the game box. -->
 
 <body>
     <div class="container" id="c1">
@@ -23,13 +25,14 @@
                     <div class="card-body">
                         <h1 class="card-title">The Psychic Game</h1>
                         <p id="guess">Guess what letter I'm thinking of</p>
-                        <p id="win">Wins: </p>
-                        <p id="loss">Losses: </p>
-                        <p id="left">Guesses left: </p>
+                        <p id="win">Wins: 0</p>
+                        <p id="loss">Losses: 0</p>
+                        <p id="left">Guesses left: 9</p>
                         <p id="far">Your Guesses so far: </p>
                     </div>
                 </div>
             </div>
         </div>
     </div>
+    <script src="assets/javascript/game.js" type="text/javascript"></script>
 </body>
